extends Control



func _on_side_scroller_pressed():
	pass # Replace with function body.


func _on_platformer_pressed():
	pass # Replace with function body.


func _on_isometric_pressed():
	pass # Replace with function body.


func _on_top_down_pressed():
	pass # Replace with function body.


func _on_quit_pressed():
	get_tree().quit()
